--- a/tests/sample/pages/layout.html
+++ b/tests/sample/pages/layout.html
@@ -2,8 +2,8 @@
   <body>
     <h1>heading</h1>
     <nav>
-      <a href="/">home</a>
-      <a href="/contact.html">contact</a>
+      <a href="/" class="home">home</a>
+      <a href="/contact.html" class="contact">contact</a>
     </nav>
     <div id="container">
     </div>
